# glossop

./: LICENSE  README.md  glossop.cabal  stack.yaml
app/: Main.hs
src/: Interp.hs
